k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: entity-resolver
  labels:
    app: entity-resolver
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: entity-resolver
